--- a/src/main/webapp/views/category/listCategory.html
+++ b/src/main/webapp/views/category/listCategory.html
@@ -12,6 +12,11 @@
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
             crossorigin="anonymous"></script>
     <!-- CSS only -->
+    <style>
+        .items{
+            border: solid black 2px;
+        }
+    </style>
 </head>
 <body>
 <h1>sads</h1>
@@ -20,9 +25,18 @@
         <h1>Header</h1>
     </div>
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-9 cards" id="cards">
-
+        <div class="col-2"></div>
+        <div class="col-10 cards">
+            <div class="card-group" id="cards">
+                <div class="card">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -50,9 +64,9 @@
         let content = "";
         for (let i = 0; i<data.length; i++) {
             content += `<div class="card border-light mb-3 items" style="max-width: 18rem;">
-                <div class="card-header">Header</div>
+                <div class="card-header">${data[i].name}</div>
                 <div class="card-body">
-                    <h5 class="card-title">${data[i].name}</h5>
+                    <h5 class="card-title">number: ${data[i].name}</h5>
                 </div>
             </div>`
         }
