--- a/src/main/webapp/views/assets/css/style.css
+++ b/src/main/webapp/views/assets/css/style.css
@@ -1332,7 +1332,7 @@ pre code {
     color: #212529; }
 .table th,
 .table td {
-    padding: 0.75rem;
+    /*padding: 0.75rem;*/
     vertical-align: top;
     border-top: 1px solid #dee2e6; }
 .table thead th {
@@ -8294,3 +8294,8 @@ h1, h2, h3, h4, h5,
     color: #40bfc1; }
 .checkbox-primary input:checked ~ .checkmark:after {
     color: #40bfc1; }
+.card .table tbody td:last-child,
+.card .table thead th:last-child {
+    padding-right: 15px;
+    display: revert !important;
+}
